add product and list product page is done

--- a/views/partials/adminaside.ejs
+++ b/views/partials/adminaside.ejs
@@ -28,7 +28,7 @@
           </a>
 
         
-          <a class="menu-link" href="page-orders-1.html">
+          <a class="menu-link" href="/admin/product-list">
             <i class="icon material-icons md-shopping_cart"></i>
             <span class="text">Products</span>
           </a>
