--- a/views/user/men.ejs
+++ b/views/user/men.ejs
@@ -101,7 +101,7 @@
 		<div class="colorlib-product">
 			<div class="container">
 				<div class="row">
-					<%-include('../partials/sidebar')  %>
+					<!-- <%-include('../partials/sidebar')  %> -->
 				</div>
 				<div class="col-lg-9 col-xl-9">
 				<div class="row row-pb-md">
@@ -116,41 +116,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 col-lg-3 mb-4 text-center">
-						<div class="product-entry border">
-							<a href="#" class="prod-img">
-								<img src="images/item-2.jpg" class="img-fluid" alt="Free html5 bootstrap 4 template">
-							</a>
-							<div class="desc">
-								<h2><a href="#">Women's Minam Meaghan</a></h2>
-								<span class="price">$139.00</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-lg-3 mb-4 text-center">
-						<div class="product-entry border">
-							<a href="#" class="prod-img">
-								<img src="images/item-3.jpg" class="img-fluid" alt="Free html5 bootstrap 4 template">
-							</a>
-							<div class="desc">
-								<h2><a href="#">Men's Taja Commissioner</a></h2>
-								<span class="price">$139.00</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-lg-3 mb-4 text-center">
-						<div class="product-entry border">
-							<a href="#" class="prod-img">
-								<img src="images/item-4.jpg" class="img-fluid" alt="Free html5 bootstrap 4 template">
-							</a>
-							<div class="desc">
-								<h2><a href="#">Russ Men's Sneakers</a></h2>
-								<span class="price">$139.00</span>
-							</div>
-						</div>
-					</div>
-                 </div>
-				<div class="row">
+					
+					
+					
+				<!-- <div class="row">
 					<div class="col-md-12 text-center">
 						<div class="block-27">
 		               <ul>
@@ -164,7 +133,7 @@
 		               </ul>
 		            </div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 			</div>
 		</div>
