--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -1,82 +1,87 @@
-<%-include('../partials/adminheader') %>
+<%- include('../partials/adminheader') %>
 
 <body>
-    <div class="screen-overlay"></div>
-    <%-include('../partials/adminaside') %>
-    <main class="main-wrap">
-        <%-include('../partials/adminNav') %>
-        <section class="content-main">
-            <div class="content-header">
-                <div>
-                    <h2 class="content-title card-title">Products List</h2>
-                    
-                </div>
-                <div>
-                   
-                    <a href="/admin/add-product" class="btn btn-primary btn-sm rounded">Add product</a>
-                </div>
-            </div>
-            <div class="card mb-4">
-                <header class="card-header">
-                   
-                </header> <!-- card-header end// -->
-                <div class="card-body">
-                    <article class="itemlist">
-                        <div class="row align-items-center">
-                            <div class="col col-check flex-grow-0">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox">
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-4 col-8 flex-grow-1 col-name">
-                                <a class="itemside" href="#">
-                                    <div class="left">
-                                        <img src="assets/imgs/items/1.jpg" class="img-sm img-thumbnail" alt="Item">
-                                    </div>
-                                    <div class="info">
-                                        <h6 class="mb-0">T-shirt for men medium size</h6>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-lg-2 col-sm-2 col-4 col-price"> <span>$34.50</span> </div>
-                            <div class="col-lg-2 col-sm-2 col-4 col-status">
-                                <span class="badge rounded-pill alert-success">Active</span>
-                            </div>
-                            <div class="col-lg-1 col-sm-2 col-4 col-date">
-                                <span>02.11.2022</span>
-                            </div>
-                            <div class="col-lg-2 col-sm-2 col-4 col-action text-end">
-                                <a href="#" class="btn btn-sm font-sm rounded btn-brand">
-                                    <i class="material-icons md-edit"></i> Edit
-                                </a>
-                                <a href="#" class="btn btn-sm font-sm btn-light rounded">
-                                    <i class="material-icons md-delete_forever"></i> Delete
-                                </a>
-                            </div>
-                        </div> <!-- row .// -->
-                    </article> <!-- itemlist  .// -->
-                    
-                   
-                    
-                   
-                    
-                    
-                    
-                    
-                    
-                </div> <!-- card-body end// -->
-            </div> <!-- card end// -->
-            <div class="pagination-area mt-30 mb-50">
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-start">
-                        <li class="page-item active"><a class="page-link" href="#">01</a></li>
-                        <li class="page-item"><a class="page-link" href="#">02</a></li>
-                        <li class="page-item"><a class="page-link" href="#">03</a></li>
-                        <li class="page-item"><a class="page-link dot" href="#">...</a></li>
-                        <li class="page-item"><a class="page-link" href="#">16</a></li>
-                        <li class="page-item"><a class="page-link" href="#"><i class="material-icons md-chevron_right"></i></a></li>
-                    </ul>
-                </nav>
-            </div>
-        </section> <!-- content-main end// -->
-        <%-include('../partials/adminfooter')  %>
+  <div class="screen-overlay"></div>
+  <%- include('../partials/adminaside') %>
+  <main class="main-wrap">
+    <%- include('../partials/adminNav') %>
+    <section class="content-main">
+      <div class="content-header">
+        <div>
+          <h2 class="content-title card-title">Products List</h2>
+        </div>
+        <div>
+          <a href="/admin/add-product" class="btn btn-primary btn-sm rounded"
+            >Add product</a
+          >
+        </div>
+      </div>
+      <div class="card mb-4">
+        <header class="card-header"></header>
+        <div class="card-body">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">Image</th>
+                <th scope="col">Description</th>
+                <th scope="col">Price</th>
+                <th scope="col">Status</th>
+                <th scope="col">Units</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% products.forEach(product => { %>
+              <tr>
+                <td>
+                  <img
+                    src="/uploads/products/<%= product.image %>"
+                    class="img-sm img-thumbnail"
+                    alt="Product"
+                  />
+                </td>
+                <td><%= product.description %></td>
+                <td>$<%= product.regularPrice %></td>
+                <td>
+                  <span class="badge rounded-pill alert-success">Active</span>
+                </td>
+                <td><%= product.units%></td>
+                <td>
+                  <a href="#" class="btn btn-sm font-sm rounded btn-brand">
+                    <i class="material-icons md-edit"></i> Edit
+                  </a>
+                  <a href="#" class="btn btn-sm font-sm btn-light rounded">
+                    <i class="material-icons md-delete_forever"></i> Delete
+                  </a>
+                </td>
+              </tr>
+              <% }); %>
+            </tbody>
+          </table>
+        </div>
+        <!-- card-body end// -->
+      </div>
+      <!-- card end// -->
+      <div class="pagination-area mt-30 mb-50">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination justify-content-start">
+            <li class="page-item active">
+              <a class="page-link" href="#">01</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">02</a></li>
+            <li class="page-item"><a class="page-link" href="#">03</a></li>
+            <li class="page-item"><a class="page-link dot" href="#">...</a></li>
+            <li class="page-item"><a class="page-link" href="#">16</a></li>
+            <li class="page-item">
+              <a class="page-link" href="#"
+                ><i class="material-icons md-chevron_right"></i
+              ></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </section>
+    <!-- content-main end// -->
+    <%- include('../partials/adminfooter') %>
+  </main>
+</body>
