--- a/views/admin/add-products.ejs
+++ b/views/admin/add-products.ejs
@@ -6,7 +6,11 @@
   <main class="main-wrap">
     <%-include('../partials/adminNav') %>
     <section class="content-main">
-      <form action="/admin/add-product" method="post">
+      <form
+        action="/admin/add-product"
+        method="post"
+        enctype="multipart/form-data"
+      >
         <div class="row">
           <div class="col-9">
             <div class="content-header">
@@ -28,7 +32,7 @@
                     placeholder="Type here"
                     class="form-control"
                     id="product_name"
-                    name="title"
+                    name="name"
                   />
                 </div>
                 <div class="mb-4">
@@ -40,10 +44,10 @@
                     name="description"
                   ></textarea>
                 </div>
-                <!-- <div class="mb-4">
+                <div class="mb-4">
                   <label class="form-label">Product Image</label>
                   <input type="file" class="form-control" name="image" />
-                </div> -->
+                </div>
 
                 <div class="row">
                   <div class="col-lg-4">
@@ -105,7 +109,7 @@
           </div>
 
           <div class="col-lg-3">
-            <div class="card mb-4">
+            <!-- <div class="card mb-4">
               <div class="card-header">
                 <h4>Media</h4>
               </div>
@@ -115,7 +119,7 @@
                   <input class="form-control" type="file" />
                 </div>
               </div>
-            </div>
+            </div> -->
             <!-- card end// -->
             <div class="card mb-4">
               <div class="card-header">
