--- a/views/admin/categoryForm.ejs
+++ b/views/admin/categoryForm.ejs
@@ -17,10 +17,10 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-3">
-                            <form action="/admin/categoryForm#submitted" method="post">
+                            <form action="/admin/categoryForm#submitted" method="post"  enctype="multipart/form-data">
                                 <div class="mb-4">
-                                    <label for="product_name" class="form-label">Image Url</label>
-                                    <input type="text" placeholder="Type here" class="form-control" id="product_name" name="image">
+                                  <label class="form-label">Category Image</label>
+                                  <input type="file" class="form-control" name="image" />
                                 </div>
                                 <div class="mb-4">
                                     <label for="product_slug" class="form-label">Category name</label>
@@ -44,7 +44,7 @@
                                         <th>Image</th>
                                         <th>Name</th>
                                         <th>Description</th>
-                                        <th>Order</th>
+                                        <th>Status</th>
                                         <th class="text-end">Action</th>
                                       </tr>
                                     </thead>
@@ -52,11 +52,19 @@
                                       <% categories.forEach(category => { %>
                                       <tr>
                                         <td>
-                                          <img src="<%= category.image %>" alt="Category Image" width="50" height="50">
+                                          <img src="/uploads/categories<%=category.image %>" alt="Category Image" width="50" height="50">
                                         </td>
                                         <td><b><%= category.name %></b></td>
                                         <td><%= category.description %></td>
-                                        <td><%= category.order %></td>
+                                        <%if(category.verified==0){%>
+                                          <td><a href="">
+                                              <button class="badge rounded-pill alert-success active-badge">Active</button>
+                                          </a></td>
+                                          <%} else {%>
+                                          <td> <a href="">
+                                              <button class="badge rounded-pill alert-danger inactive-badge">Inactive</button>
+                                          </a></td>
+                                          <%}%> 
                                         <td class="text-end">
                                           <div class="dropdown">
                                             <a href="#" data-bs-toggle="dropdown" class="btn btn-light rounded btn-sm font-sm">
