category with image is set

--- a/views/admin/categoryForm.ejs
+++ b/views/admin/categoryForm.ejs
@@ -52,7 +52,7 @@
                                       <% categories.forEach(category => { %>
                                       <tr>
                                         <td>
-                                          <img src="/uploads/categories<%=category.image %>" alt="Category Image" width="50" height="50">
+                                          <img src="/uploads/categories/<%=category.image %>" alt="Category Image" width="50" height="50">
                                         </td>
                                         <td><b><%= category.name %></b></td>
                                         <td><%= category.description %></td>
