--- a/views/user/men.ejs
+++ b/views/user/men.ejs
@@ -41,12 +41,13 @@
 	<div class="colorlib-loader"></div>
 
 	<div id="page">
-		<%-include('../partials/nav')%>
+
+		<%-include('../partials/nav')  %>
 		<div class="breadcrumbs">
 			<div class="container">
 				<div class="row">
 					<div class="col">
-						<p class="bread"><span><a href="index.html">Home</a></span> / <span>Men</span></p>
+						<p class="bread"><span><a href="index.html">Home</a></span> / <span>Women</span></p>
 					</div>
 				</div>
 			</div>
@@ -57,7 +58,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="breadcrumbs-img" style="background-image: url(images/cover-img-1.jpg);">
-							<h2>Men's</h2>
+							<h2>Mens</h2>
 						</div>
 						<div class="menu text-center">
 							<p><a href="#">New Arrivals</a> <a href="#">Best Sellers</a> <a href="#">Extended Widths</a> <a href="#">Sale</a></p>
@@ -72,7 +73,7 @@
 				<div class="row">
 					<div class="col-sm-4 text-center">
 						<div class="featured">
-							<div class="featured-img featured-img-2" style="background-image: url(images/men.jpg);">
+							<div class="featured-img featured-img-2" style="background-image: url(images/img_bg_2.jpg);">
 								<h2>Casuals</h2>
 								<p><a href="#" class="btn btn-primary btn-lg">Shop now</a></p>
 							</div>
@@ -97,46 +98,35 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="colorlib-product">
 			<div class="container">
-				<div class="row">
-					<!-- <%-include('../partials/sidebar')  %> -->
-				</div>
+			  <div class="row">
+				<% include('../partials/sidebar') %>
 				<div class="col-lg-9 col-xl-9">
-				<div class="row row-pb-md">
-					<div class="col-md-3 col-lg-3 mb-4 text-center">
+				  <div class="row row-pb-md">
+					<% products.forEach(product => { %>
+					  <div class="col-lg-4 mb-4 text-center">
 						<div class="product-entry border">
-							<a href="#" class="prod-img">
-								<img src="images/item-1.jpg" class="img-fluid" alt="Free html5 bootstrap 4 template">
-							</a>
-							<div class="desc">
-								<h2><a href="#">Women's Boots Shoes Maca</a></h2>
-								<span class="price">$139.00</span>
-							</div>
+						  <a href="#" class="prod-img">
+							<img src="/uploads/products/<%= product.image %>" class="img-fluid" alt="<%= product.name %>">
+						  </a>
+						  <div class="desc">
+							<h2><a href="#"><%= product.name %></a></h2>
+							<span class="price">$<%= product.regularPrice %></span>
+						  </div>
 						</div>
-					</div>
-					
-					
-					
-				<!-- <div class="row">
-					<div class="col-md-12 text-center">
-						<div class="block-27">
-		               <ul>
-			               <li><a href="#"><i class="ion-ios-arrow-back"></i></a></li>
-		                  <li class="active"><span>1</span></li>
-		                  <li><a href="#">2</a></li>
-		                  <li><a href="#">3</a></li>
-		                  <li><a href="#">4</a></li>
-		                  <li><a href="#">5</a></li>
-		                  <li><a href="#"><i class="ion-ios-arrow-forward"></i></a></li>
-		               </ul>
-		            </div>
-					</div>
-				</div> -->
+					  </div>
+					<% }); %>
+				  </div>
+				  <div class="row">
+					<!-- Pagination or other content can be added here -->
+				  </div>
+				</div>
+			  </div>
 			</div>
-			</div>
-		</div>
+		  </div>
+		  
 
 		<%-include('../partials/footer') %>
 	</div>
