--- a/views/user/women.ejs
+++ b/views/user/women.ejs
@@ -116,30 +116,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-4 mb-4 text-center">
-								<div class="product-entry border">
-									<a href="#" class="prod-img">
-										<img src="images/item-2.jpg" class="img-fluid" alt="Free html5 bootstrap 4 template">
-									</a>
-									<div class="desc">
-										<h2><a href="#">Women's Minam Meaghan</a></h2>
-										<span class="price">$139.00</span>
-									</div>
-								</div>
-							</div>
-							<div class="col-lg-4 mb-4 text-center">
-								<div class="product-entry border">
-									<a href="#" class="prod-img">
-										<img src="images/item-3.jpg" class="img-fluid" alt="Free html5 bootstrap 4 template">
-									</a>
-									<div class="desc">
-										<h2><a href="#">Men's Taja Commissioner</a></h2>
-										<span class="price">$139.00</span>
-									</div>
-								</div>
-							</div>
 						<div class="row">
-							<div class="col-md-12 text-center">
+							<!-- <div class="col-md-12 text-center">
 								<div class="block-27">
 				               <ul>
 					               <li><a href="#"><i class="ion-ios-arrow-back"></i></a></li>
@@ -151,7 +129,7 @@
 				                  <li><a href="#"><i class="ion-ios-arrow-forward"></i></a></li>
 				               </ul>
 				            </div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
