till user listing without blocking done

--- a/views/partials/adminaside.ejs
+++ b/views/partials/adminaside.ejs
@@ -40,7 +40,7 @@
           </a>
         
         
-          <a class="menu-link" href="page-form-product-1.html">
+          <a class="menu-link" href="/admin/users-list">
             <i class="icon material-icons md-add_box"></i>
             <span class="text">Users</span>
           </a>
