--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -15,9 +15,9 @@
           </div>
         </div>
         <form class="login-form" action="/login" method="post"> 
-          <input type="text" placeholder="username" name="username"/>
+          <input type="text" placeholder="username" name="name"/>
           <input type="password" placeholder="password" name="password"/>
-          <button type="su">login</button>
+          <button type="submit">login</button>
           <div class="error-message">
             <% if (errorMessage) { %>
               <p style="color: red;"><%= errorMessage %></p>
