product edit is done

--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -47,7 +47,7 @@
                 </td>
                 <td><%= product.units%></td>
                 <td>
-                  <a href="#" class="btn btn-sm font-sm rounded btn-brand">
+                  <a href="/admin/edit-products/<%= product._id %>" class="btn btn-sm font-sm rounded btn-brand">
                     <i class="material-icons md-edit"></i> Edit
                   </a>
                   <a href="#" class="btn btn-sm font-sm btn-light rounded">
