category list unlist without functionality

--- a/views/admin/add-products.ejs
+++ b/views/admin/add-products.ejs
@@ -129,7 +129,7 @@
                   </div>
                   <div class="col-sm-6 mb-3">
                     <label class="form-label">Sub-category</label>
-                    <select class="form-select" name="Sub-category">
+                    <select class="form-select" name="SubCategory">
                       <option>Nike</option>
                       <option>Adidas</option>
                       <option>Puma</option>
