--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -40,7 +40,7 @@
             <div class="card mx-auto card-login">
                 <div class="card-body">
                     <h4 class="card-title mb-4">Sign in</h4>
-                    <form action="/admin/admin-login" method="post">
+                    <form action="/admin/admin" method="post">
                         <div class="mb-3">
                             <input class="form-control" placeholder="Username" type="text" name="username">
                         </div> <!-- form-group// -->
