--- a/views/admin/add-products.ejs
+++ b/views/admin/add-products.ejs
@@ -10,6 +10,7 @@
         action="/admin/add-product"
         method="post"
         enctype="multipart/form-data"
+        onsubmit="return validatePrices()"
       >
         <div class="row">
           <div class="col-9">
@@ -59,6 +60,7 @@
                           type="text"
                           class="form-control"
                           name="regularPrice"
+                          id="regularPrice"
                         />
                       </div>
                     </div>
@@ -71,6 +73,7 @@
                         type="text"
                         class="form-control"
                         name="salePrice"
+                        id="salePrice"
                       />
                     </div>
                   </div>
@@ -145,7 +148,22 @@
         </div>
       </form>
     </section>
-    <!-- content-main end// -->
+    <!-- content-main end// --> 
+    <!-- frontend validation  -->
+    <script>
+      function validatePrices() {
+        var regularPrice = document.getElementById('regularPrice').value;
+        var salePrice = document.getElementById('salePrice').value;
+  
+        if (parseFloat(regularPrice) < 0 || parseFloat(salePrice) < 0) {
+          alert('Negative prices are not allowed!');
+          return false; // Prevent form submission
+        }
+  
+        return true; // Allow form submission
+      }
+    </script>
+    <!-- frontend validation ends -->
 
     <%-include('../partials/adminfooter') %>
   </main>
